// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin cru community renders with multiple reported items 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
  <View
    style={
      Array [
        Object {
          "padding": 4,
        },
        Object {},
      ]
    }
  />
  <ReportItemHeaderCard
    count={2}
    onPress={[Function]}
    testID="ReportItemCard"
  />
</View>
`;

exports[`admin cru community renders without reported items 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
</View>
`;

exports[`admin global community renders with 0 reported items 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
</View>
`;

exports[`admin global community renders without reported items 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/celebrateHearts.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Celebrate One Another
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      See and celebrate one another's Steps of Faith.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`admin user created community does not render reported item card even when there is 1 reported item 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
</View>
`;

exports[`closes comment card 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
  <View
    style={
      Array [
        Object {
          "padding": 4,
        },
        Object {},
      ]
    }
  />
  <ReportItemHeaderCard
    count={2}
    onPress={[Function]}
    testID="ReportItemCard"
  />
</View>
`;

exports[`members cru community does not render reported item card even when reported items exist 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
</View>
`;

exports[`members cru community renders without reported items 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
</View>
`;

exports[`members global community renders without reported items 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/celebrateHearts.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Celebrate One Another
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      See and celebrate one another's Steps of Faith.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`members user created community does not render the reported items card even when reported items exist 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
</View>
`;

exports[`members user created community renders without reported items 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
</View>
`;

exports[`navigates to group report screen 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
  <View
    style={
      Array [
        Object {
          "padding": 4,
        },
        Object {},
      ]
    }
  />
  <ReportItemHeaderCard
    count={2}
    onPress={[Function]}
    testID="ReportItemCard"
  />
</View>
`;

exports[`navigates to unread comments screen 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
  <View
    style={
      Array [
        Object {
          "padding": 4,
        },
        Object {},
      ]
    }
  />
  <ReportItemHeaderCard
    count={2}
    onPress={[Function]}
    testID="ReportItemCard"
  />
</View>
`;

exports[`owner cru community renders with 1 reported item 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
  <View
    style={
      Array [
        Object {
          "padding": 4,
        },
        Object {},
      ]
    }
  />
  <ReportItemHeaderCard
    count={1}
    onPress={[Function]}
    testID="ReportItemCard"
  />
</View>
`;

exports[`owner global community renders without reported items 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/celebrateHearts.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Celebrate One Another
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      See and celebrate one another's Steps of Faith.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`owner renders with 0 reported items 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
</View>
`;

exports[`owner user created community renders with 1 reported item 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
  <View
    style={
      Array [
        Object {
          "padding": 4,
        },
        Object {},
      ]
    }
  />
  <ReportItemHeaderCard
    count={1}
    onPress={[Function]}
    testID="ReportItemCard"
  />
</View>
`;

exports[`owner user created community renders with multiple reported items 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
  <View
    style={
      Array [
        Object {
          "padding": 4,
        },
        Object {},
      ]
    }
  />
  <ReportItemHeaderCard
    count={2}
    onPress={[Function]}
    testID="ReportItemCard"
  />
</View>
`;

exports[`owner user created community renders with multiple reported items but no unreadComments 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 8,
          "elevation": 4,
          "flexDirection": "row",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
        Object {
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "marginBottom": 5,
          "marginHorizontal": 0,
          "marginVertical": 0,
          "position": "relative",
          "shadowColor": "#B4B6BA",
          "shadowOffset": Object {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 4,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "padding": 25,
            "paddingTop": 35,
          },
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../assets/images/celebrateHearts.png",
          }
        }
        style={
          Object {
            "height": 60,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#007398",
              "fontSize": 24,
              "fontWeight": "300",
              "paddingTop": 5,
              "textAlign": "center",
            },
          ]
        }
      >
        Celebrate One Another
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "paddingHorizontal": 50,
              "paddingVertical": 5,
              "textAlign": "center",
            },
          ]
        }
      >
        See and celebrate one another's Steps of Faith.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "position": "absolute",
            "right": 10,
            "top": 10,
          },
          Object {},
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        onPress={[Function]}
        testID="CloseIcon"
      />
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#505256",
          "borderBottomWidth": 1,
          "padding": 20,
        },
        Object {},
      ]
    }
  >
    <ReportItemHeaderCard
      count={2}
      onPress={[Function]}
      testID="ReportItemCard"
    />
  </View>,
]
`;

exports[`renders nothing if isMember is true 1`] = `null`;

exports[`unread comments card renders comment card 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#505256",
        "borderBottomWidth": 1,
        "padding": 20,
      },
      Object {},
    ]
  }
>
  <UnreadCommentsCard
    count={12}
    onClose={[Function]}
    onPress={[Function]}
    testID="UnreadCommentsCard"
  />
  <View
    style={
      Array [
        Object {
          "padding": 4,
        },
        Object {},
      ]
    }
  />
  <ReportItemHeaderCard
    count={2}
    onPress={[Function]}
    testID="ReportItemCard"
  />
</View>
`;

exports[`unread comments card renders no comment card when global org 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 8,
          "elevation": 4,
          "flexDirection": "row",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
        Object {
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "marginBottom": 5,
          "marginHorizontal": 0,
          "marginVertical": 0,
          "position": "relative",
          "shadowColor": "#B4B6BA",
          "shadowOffset": Object {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 4,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "padding": 25,
            "paddingTop": 35,
          },
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../assets/images/celebrateHearts.png",
          }
        }
        style={
          Object {
            "height": 60,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#007398",
              "fontSize": 24,
              "fontWeight": "300",
              "paddingTop": 5,
              "textAlign": "center",
            },
          ]
        }
      >
        Celebrate One Another
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "paddingHorizontal": 50,
              "paddingVertical": 5,
              "textAlign": "center",
            },
          ]
        }
      >
        See and celebrate one another's Steps of Faith.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "position": "absolute",
            "right": 10,
            "top": 10,
          },
          Object {},
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        onPress={[Function]}
        testID="CloseIcon"
      />
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#505256",
          "borderBottomWidth": 1,
          "padding": 20,
        },
        Object {},
      ]
    }
  >
    <ReportItemHeaderCard
      count={2}
      onPress={[Function]}
      testID="ReportItemCard"
    />
  </View>,
]
`;

exports[`unread comments card renders no comment card when no new comments 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderRadius": 8,
          "elevation": 4,
          "flexDirection": "row",
          "marginHorizontal": 16,
          "marginVertical": 8,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        },
        Object {
          "backgroundColor": "#ffffff",
          "borderRadius": 0,
          "marginBottom": 5,
          "marginHorizontal": 0,
          "marginVertical": 0,
          "position": "relative",
          "shadowColor": "#B4B6BA",
          "shadowOffset": Object {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 4,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "padding": 25,
            "paddingTop": 35,
          },
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../assets/images/celebrateHearts.png",
          }
        }
        style={
          Object {
            "height": 60,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#007398",
              "fontSize": 24,
              "fontWeight": "300",
              "paddingTop": 5,
              "textAlign": "center",
            },
          ]
        }
      >
        Celebrate One Another
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "paddingHorizontal": 50,
              "paddingVertical": 5,
              "textAlign": "center",
            },
          ]
        }
      >
        See and celebrate one another's Steps of Faith.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "position": "absolute",
            "right": 10,
            "top": 10,
          },
          Object {},
        ]
      }
    >
      <SvgMock
        color="#B4B6BA"
        onPress={[Function]}
        testID="CloseIcon"
      />
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#505256",
          "borderBottomWidth": 1,
          "padding": 20,
        },
        Object {},
      ]
    }
  >
    <ReportItemHeaderCard
      count={2}
      onPress={[Function]}
      testID="ReportItemCard"
    />
  </View>,
]
`;
